# myInterpolator

./: CMakeLists.txt  README.md  compileInstallLinux.sh  compileInstallWindows.bat
src/: Image.h  Interpolator2DOpenMP.cpp  Interpolator2DOpenMP.h  IpParameters.h  Postprocess.cpp  Postprocess.h  myInterpolator.cpp
src/i2libs/: Converter.cpp  Converter.h  Exception.h  Point2D.h  Point3D.h  Progress.h  StdProgress.h  StopWatch.cpp  StopWatch.h  basictypes.h  coolmath.cpp  coolmath.h  fpcomp.h  fpcomp_base.h
test/: holes_big.tif
